<resources>
    <string name="app_name">Note Writer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Add Note.</string>
    <string name="enter_the_title">Title</string>
    <string name="enter_the_description">Note</string>
    <string name="add_new_task">Create New Note</string>
    <string name="enter_the_task_titile">Title</string>
    <string name="enter_the_task_description">Note</string>
    <string name="edit_task_details">Edit Note </string>
    <string name="description">Note</string>
    <string name="task_title">Title</string>
</resources>